# Meridian

./: .gitignore  LICENSE  README.md
adapters/: README.md
adapters/agent-skills/: README.md
adapters/agent-skills/meridian-analysis-harness/: SKILL.md
analysis-workbench/: SKILL.md
analysis-workbench/templates/: contract_template.yaml
core/: README.md
core/evaluation/: verify_consistency.py
core/protocols/: artifacts.yaml  domain-pack.yaml  evaluation-gates.yaml  harness-lifecycle.yaml
core/templates/: analysis-contract.yaml  analysis-state.yaml  claim-ledger.yaml  extraction-record.yaml  review-result.yaml  source-log.yaml
docs/: analysis-workbench-design.md  architecture.md  evolution-roadmap.md
domains/: README.md
domains/cross-border/: README.md  meridian.domain.yaml  pyproject.toml
domains/cross-border/evaluation/: README.md
domains/cross-border/knowledge/: README.md
domains/cross-border/projects/: README.md
domains/cross-border/projects/2026-07-10-outdoor-lighting-market-scan/: task.yaml
domains/cross-border/skills/: README.md
domains/cross-border/skills/schemas/: analysis-skill.schema.yaml
domains/cross-border/templates/: analysis-task.yaml
domains/cross-border/tests/: test_cli.py
projects/cross-border-intelligence/: .gitignore  README.md
projects/cross-border-intelligence/docs/: project-brief.md
projects/cross-border-intelligence/evaluation/: source-and-logic-review.yaml
projects/cross-border-intelligence/metrics/: README.md  market-opportunity-score.yaml
skills/: README.md
skills/meridian-analysis-harness/: SKILL.md
(+8 files in other folders)
